samples/_failures_safe/1761603367_0ffe48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d036f58.c:190: error: expected ‘;’, ‘,’ or ‘)’ at end of input
